--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Voyagers</title>
 </head>
 
-<body class="bg-dark text-white">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<body class="text-white">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Voyagers</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -33,32 +33,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
-    <div class="container my-5"></div>
+    <!-- <div class="container my-5"></div> -->
+
+    <img src="sunHD.jpg" alt="">
 
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
