--- a/index.html
+++ b/index.html
@@ -1,169 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Voyagers | Home</title>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="navbar">
+        <ul class="nav-items">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        </ul>
+        <a class="nav-brand" href="#">Voyagers</a>
+        <ul class="nav-items item-right">
+          <li class="nav-item"><a class="nav-link" href="#">LogIn</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+        </ul>
+      </nav>
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Voyagers</title>
-</head>
-
-<body class="text-white">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Voyagers</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Travel</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="hero">
+        <div class="heading">
+          <h1 class="heading-primary">
+            Experience the beauty of <span class="india">इंडिया</span> with us.
+          </h1>
+          <h3 class="heading-secondary">Travle the beauty of India with us</h3>
+          <a class="button-primary" href="#"
+            >Travel Now <span class="right-arrow">&#8594;</span></a
+          >
         </div>
-    </nav>
-    <!-- <div class="container my-5"></div> -->
-
-    <img src="sunHD.jpg" alt="">
-
-    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img height="400px" src="images/sunC.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2>Welcome To Voyagers</h2>
-                    <!-- <p>Some representative placeholder content for the first slide.</p> -->
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img height="400px" src="images/streamHD (1).jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2>Welcome To Voyagers</h2>
-                    <!-- <p>Some representative placeholder content for the second slide.</p> -->
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img height="400px" src="images/beachC.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2>Welcome To Voyagers</h2>
-                    <!-- <p>Some representative placeholder content for the third slide.</p> -->
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+      </div>
+    </header>
+    <div class="divider-text">
+      <div>Add your text here</div>
     </div>
-    <!-- <hr class="featurette-divider"> -->
-
-    <div class="container-fluid bg-dark my-4">
-        <div class="row mb-2">
-            <div class="col-lg-3 text-center">
-                <img class="rounded-circle mx-auto d-block img-fluid" width="140px" height="140px" src="images/goa.jpg"
-                    alt="">
-                <h2>Goa</h2>
-                <p>Some representative placeholder content for the three columns of text below the carousel. This is the
-                    first column.</p>
-                <p><a class="btn btn-light" href="#">View details »</a></p>
-            </div>
-            <!-- /.col-lg-4 -->
-            <div class="col-lg-3 text-center">
-                <img class="rounded-circle mx-auto d-block img-fluid" width="140px" height="140px" src="images/goa.jpg"
-                    alt="">
-
-                <h2>Rajasthan</h2>
-                <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second
-                    column.</p>
-                <p><a class="btn btn-light" href="#">View details »</a></p>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-3 text-center">
-                <img class="rounded-circle mx-auto d-block img-fluid" width="140px" height="140px" src="images/goa.jpg"
-                    alt="">
-
-
-                <h2>Dharamshala</h2>
-                <p>And lastly this, the third column of representative placeholder content.</p>
-                <p><a class="btn btn-light" href="#">View details »</a></p>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-3 text-center">
-                <img class="rounded-circle mx-auto d-block img-fluid" width="140px" height="140px" src="images/goa.jpg"
-                    alt="">
-                <h2>Amritsar</h2>
-                <p>Some representative placeholder content for the three columns of text below the carousel. This is the
-                    first column.</p>
-                <p><a class="btn btn-light" href="#">View details »</a></p>
-            </div>
+    <section class="section-feature" id="#section-feature">
+      <div class="feature-box">
+        <div class="feature-image feature-image-1">&nbsp;</div>
+        <div class="feature-text feature-text-1">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+          libero commodi beatae error, adipisci odio officia eum voluptatem ut
+          unde impedit provident fuga rem, atque cupiditate ad aliquid. Dolorem,
+          repudiandae?
         </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="container my-4 bg-dark">
-        <div class="row featurette d-flex justify-content-center align-items-center">
-            <div class="col-md-7 order-md-1">
-                <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
-                        mind.</span></h2>
-                <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting
-                    prose
-                    here.</p>
-            </div>
-            <div class="col-md-5 order-md-2">
-                <img class="img-fluid" src="images/lake.jpg" width="100%" height="100%" alt="">
-
-            </div>
+      </div>
+      <div class="feature-box">
+        <div class="feature-text feature-text-2">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+          libero commodi beatae error, adipisci odio officia eum voluptatem ut
+          unde impedit provident fuga rem, atque cupiditate ad aliquid. Dolorem,
+          repudiandae?
         </div>
+        <div class="feature-image feature-image-2">&nbsp;</div>
+      </div>
+      <div class="feature-box">
+        <div class="feature-image feature-image-3">&nbsp;</div>
 
-        <!-- <hr class="featurette-divider"> -->
-
-        <div class="row featurette  d-flex justify-content-center align-items-center">
-            <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for
-                        yourself.</span></h2>
-                <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how
-                    this layout would work with some actual real-world content in place.</p>
-            </div>
-            <div class="col-md-5 order-md-1">
-                <img class="img-fluid" src="images/mount.jpg" width="100%" height="100%" alt="">
-            </div>
+        <div class="feature-text feature-text-3">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+          libero commodi beatae error, adipisci odio officia eum voluptatem ut
+          unde impedit provident fuga rem, atque cupiditate ad aliquid. Dolorem,
+          repudiandae?
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-</body>
-
+      </div>
+      <div class="feature-box">
+        <div class="feature-text feature-text-4">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus
+          libero commodi beatae error, adipisci odio officia eum voluptatem ut
+          unde impedit provident fuga rem, atque cupiditate ad aliquid. Dolorem,
+          repudiandae?
+        </div>
+        <div class="feature-image feature-image-4">&nbsp;</div>
+      </div>
+    </section>
+  </body>
 </html>
