--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Voyagers | Home</title>
   </head>
+  <!-- this is just to text git -->
   <body>
     <header class="header">
       <nav class="navbar">
