--- a/home.html
+++ b/home.html
@@ -15,14 +15,70 @@
                     <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
-                <a class="nav-brand" href="#">Voyagers</a>
+                <a class="nav-brand" href="index.html">Voyagers</a>
                 <ul class="nav-items item-right">
-                    <img src="images/moon.png" id="dark-mode" />
+                    <!-- <img src="images/moon.png" id="dark-mode" /> -->
                     <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
                 </ul>
             </nav>
+            <!-- <div class="hero"></div> -->
         </header>
+        <main>
+            <section class="section-1">
+                <div class="homeHeading"><h1>INTRO</h1></div>
+                <div class="feature-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Repellendus
+                    libero commodi beatae error, adipisci odio officia eum
+                    voluptatem ut
+                    unde impedit provident fuga rem, atque cupiditate ad
+                    aliquid. Dolorem,
+                    repudiandae?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Maiores voluptatibus
+                    impedit possimus natus, eaque, rerum similique pariatur
+                    magni nemo amet consequuntur
+                    quas, esse fuga omnis eveniet harum ullam placeat dolorum.
+                    Eos ratione nemo amet dignissimos eligendi. Quam,
+                    blanditiis. Consequatur, corporis.
+                </div>
+            </section>
+            <div class="homeHeading"><h1>Popular places</h1></div>
+            <section class="section-2">
+                <div><h1>GOA</h1></div>
+                <div><h1>GOA</h1></div>
+                <div><h1>GOA</h1></div>
+                <div><h1>GOA</h1></div>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="footer-content-left">
+                <ul class="footer-items">
+                    <li class="footer-heading">Contributors</li>
+                    <li class="footer-item"><a class="footer-link"
+                            target="_blank"
+                            href="https://www.instagram.com/amit.fiend/">Amit</a></li>
+                    <li class="footer-item"><a class="footer-link"
+                            target="_blank" href="#">Aaryan</a></li>
+                    <li class="footer-item"><a class="footer-link"
+                            target="_blank" href="#">AakashDeep</a></li>
+                    <li class="footer-item"><a class="footer-link"
+                            target="_blank" href="#">Abhinav</a></li>
+                </ul>
+            </div>
+            <div class="footer-content-right">
+                <p class="footer-right-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Modi id
+                    aspernatur eos sequi exercitationem illo deleniti. Rem odio,
+                    dicta
+                    repellendus facere illum beatae facilis voluptatum
+                    reiciendis voluptatem
+                    quisquam ducimus voluptatibus.
+                </p>
+            </div>
+        </footer>
     </body>
 
 </html>
