--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <nav class="navbar">
         <ul class="nav-items">
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
         </ul>
         <a class="nav-brand" href="#">Voyagers</a>
