modify home page +blog+popularplaces

--- a/home.html
+++ b/home.html
@@ -1,11 +1,10 @@
 <html lang="en">
-
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Voyagers | Home</title>
-        <link rel="stylesheet" href="homestyle.css">
+        <link rel="stylesheet" href="homestyle.css" />
     </head>
 
     <body>
@@ -22,10 +21,10 @@
                     <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
                 </ul>
             </nav>
-            <!-- <div class="hero"></div> -->
         </header>
-        <main>
-            <section class="section-1">
+
+        <section class="section-1">
+            <div class="s1">
                 <div class="homeHeading"><h1>INTRO</h1></div>
                 <div class="feature-text">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -34,37 +33,157 @@
                     voluptatem ut
                     unde impedit provident fuga rem, atque cupiditate ad
                     aliquid. Dolorem,
-                    repudiandae?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Maiores voluptatibus
-                    impedit possimus natus, eaque, rerum similique pariatur
-                    magni nemo amet consequuntur
-                    quas, esse fuga omnis eveniet harum ullam placeat dolorum.
-                    Eos ratione nemo amet dignissimos eligendi. Quam,
-                    blanditiis. Consequatur, corporis.
+                    repudiandae? Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit.
+                    Maiores voluptatibus impedit possimus natus, eaque, rerum
+                    similique
+                    pariatur magni nemo amet consequuntur quas, esse fuga omnis
+                    eveniet
+                    harum ullam placeat dolorum. Eos ratione nemo amet
+                    dignissimos
+                    eligendi. Quam, blanditiis. Consequatur, corporis.
                 </div>
-            </section>
+            </div>
+        </section>
+        <section class="section-2">
             <div class="homeHeading"><h1>Popular places</h1></div>
-            <section class="section-2">
+            <div class="s2">
+                <div class="recent-visits">
+                    <div>
+                        <img src="images/pexels.jpg" alt=""
+                            class="recent-visits-img" />
+                    </div>
+                    <div>
+                        <span>Goa</span>
+                    </div>
+                </div>
+                <div class="recent-visits">
+                    <div>
+                        <img src="images/pexels.jpg" alt=""
+                            class="recent-visits-img" />
+                    </div>
+                    <div>
+                        <span>New Delhi</span>
+                    </div>
+                </div>
+                <div class="recent-visits">
+                    <div>
+                        <img src="images/pexels.jpg" alt=""
+                            class="recent-visits-img" />
+                    </div>
+                    <div>
+                        <span>Rajasthan</span>
+                    </div>
+                </div>
+                <div class="recent-visits">
+                    <div>
+                        <img src="images/pexels.jpg" alt=""
+                            class="recent-visits-img" />
+                    </div>
+                    <div>
+                        <span>Amritsar</span>
+                    </div>
+                </div>
+            </div>
+            <!-- <div><h1>GOA</h1></div>
                 <div><h1>GOA</h1></div>
                 <div><h1>GOA</h1></div>
-                <div><h1>GOA</h1></div>
-                <div><h1>GOA</h1></div>
-            </section>
-        </main>
+                <div><h1>GOA</h1></div> -->
+        </section>
+        <section class="section-3">
+            <div class="homeHeading">
+                <h2>Recent Blogs</h2>
+            </div>
+            <div class="s-3">
+                <div class="recent-blogs" id="recent-blog-1">
+                    <div class="r-blog-img">
+                        <img src="images/scene-2.jpg" alt="" class="scene">
+                    </div>
+                    <div class="r-blog-head-text">
+                        <h1 class='blog-head'>Lorem ipsum dolor sit amet?</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Fuga laborum Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Exercitationem,
+                            labore? Saepe vitae perspiciatis aspernatur nemo non
+                            ratione impedit incidunt tempora.libero enim saepe!
+                            Unde
+                            consequuntur, nulla doloribus accusamus praesentium
+                            doloremque.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="recent-blogs" id="recent-blog-2">
+                    <div class="r-blog-head-text">
+                        <h1 class='blog-head'>Lorem ipsum dolor sit amet,
+                            quaerat?</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Fuga laborum libero enim Lorem ipsum dolor sit
+                            amet consectetur, adipisicing elit.
+                            Nobis illum inventore sapiente in alias asperiores
+                            qui incidunt amet laudantium numquam. saepe! Unde
+                            consequuntur, nulla doloribus accusamus praesentium
+                            doloremque.</p>
+                    </div>
+                    <div class="r-blog-img">
+                        <img src="images/scene-3.jpg" alt="" class="scene">
+                    </div>
+                </div>
+                <br>
+                <div class="recent-blogs" id="recent-blog-3">
+                    <div class="r-blog-img">
+                        <img src="images/scene-4.jpg" alt="" class="scene">
+                    </div>
+                    <div class="r-blog-head-text">
+                        <h1 class='blog-head'>Lorem ipsum dolor sit ametuaerat?</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Fuga labor Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Odio dolore
+                            s perferendis illo distinctio assumenda aspernatur,
+                            doloremque minus similique dolore nobis? um libero
+                            enim saepe! Unde
+                            consequuntur, nulla doloribus accusamus praesentium
+                            doloremque.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="recent-blogs" id="recent-blog-4">
+                    <div class="r-blog-head-text">
+                        <h1 class='blog-head'>Lorem ipsum dolor elit. Eos,
+                            quaerat?</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Fuga laborum Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit.
+                            Ab sint obcaecati asperiores optio natus odio
+                            explicabo soluta! Quas, aliquam totam?libero enim
+                            saepe! Unde
+                            consequuntur, nulla doloribus accusamus praesentium
+                            doloremque.</p>
+                    </div>
+                    <div class="r-blog-img">
+                        <img src="images/scene-5.jpg" alt="" class="scene">
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="footer-content-left">
                 <ul class="footer-items">
                     <li class="footer-heading">Contributors</li>
-                    <li class="footer-item"><a class="footer-link"
+                    <li class="footer-item">
+                        <a
+                            class="footer-link"
                             target="_blank"
-                            href="https://www.instagram.com/amit.fiend/">Amit</a></li>
-                    <li class="footer-item"><a class="footer-link"
-                            target="_blank" href="#">Aaryan</a></li>
-                    <li class="footer-item"><a class="footer-link"
-                            target="_blank" href="#">AakashDeep</a></li>
-                    <li class="footer-item"><a class="footer-link"
-                            target="_blank" href="#">Abhinav</a></li>
+                            href="https://www.instagram.com/amit.fiend/">Amit</a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" target="_blank" href="#">Aaryan</a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" target="_blank" href="#">AakashDeep</a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" target="_blank" href="#">Abhinav</a>
+                    </li>
                 </ul>
             </div>
             <div class="footer-content-right">
@@ -74,11 +193,28 @@
                     aspernatur eos sequi exercitationem illo deleniti. Rem odio,
                     dicta
                     repellendus facere illum beatae facilis voluptatum
-                    reiciendis voluptatem
-                    quisquam ducimus voluptatibus.
+                    reiciendis
+                    voluptatem quisquam ducimus voluptatibus.
                 </p>
             </div>
         </footer>
     </body>
-
+    <script>
+              const header = document.querySelector(".header");
+      const navbar = document.querySelector(".navbar");
+      const stickyNav = function (entries) {
+        const [entry] = entries;
+        if (!entry.isIntersecting) {
+          navbar.style.backgroundColor = "#0f0f0d";
+        }
+        if (entry.isIntersecting) {
+          navbar.style.backgroundColor = "transparent";
+        }
+      };
+      const observer = new IntersectionObserver(stickyNav, {
+        root: null,
+        threshold: 0.1,
+      });
+      observer.observe(header);
+    </script>
 </html>
