--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       const stickyNav = function (entries) {
         const [entry] = entries;
         if (!entry.isIntersecting) {
-          navbar.style.backgroundColor = "#2b2b2b";
+          navbar.style.backgroundColor = "#0f0f0d";
         }
         if (entry.isIntersecting) {
           navbar.style.backgroundColor = "transparent";
