small fix for screen resolution

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Voyagers | Home</title>
+    <title>Voyagers</title>
   </head>
   <!-- this is just to text git -->
   <body>
@@ -41,7 +41,7 @@
       </div>
     </header>
     <div class="divider-text">
-      <div>Add your text here</div>
+      <div>POSTS</div>
     </div>
     <section class="section-feature" id="#section-feature">
       <div class="feature-box">
